--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -1,61 +1,3 @@
-/* Self-hosted Inter font faces. Coloca los .woff2 en este mismo directorio.
-   Elimina el <link> de Google Fonts en index.html una vez que verifiques que funcionan. */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url('./inter-latin-400-normal.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url('./inter-latin-500-normal.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url('./inter-latin-600-normal.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url('./inter-latin-700-normal.woff2') format('woff2');
-}
-
-/* latin-ext subset (agrega estos archivos si necesitas caracteres ampliados: ł, ą, ę, ő, ű, ș, ță, etc.) */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url('./inter-latin-ext-400-normal.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url('./inter-latin-ext-500-normal.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url('./inter-latin-ext-600-normal.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url('./inter-latin-ext-700-normal.woff2') format('woff2');
-}
+/* Este archivo importa la fuente Inter desde Google Fonts. */
